[package]
name = "ruffle-psvita"
version = "0.1.0"
edition = "2021"

[dependencies]
# Il cuore di Ruffle
ruffle_core = { git = "https://github.com/ruffle-rs/ruffle", default-features = false }

# Libreria base per PS Vita
psp2-sys = "0.1"

[profile.release]
panic = "abort"
lto = true
opt-level = 3
codegen-units = 1
