[package]
name = "ruffle-psvita"
version = "0.1.0"
edition = "2021"

[dependencies]
# Prendiamo solo il 'core' di Ruffle, senza le parti PC/Web
ruffle_core = { git = "https://github.com/ruffle-rs/ruffle", default-features = false }
vitasdk-sys = "0.1"

[profile.release]
panic = "abort"
lto = true
opt-level = 3
